--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -11,6 +11,7 @@ nav {
   box-sizing: border-box;
   position: fixed;
   font-family: 'Bungee', sans-serif;
+  position: fixed;
 }
 
 .write-new-tweet {
