implemented section 'adding the header' including designing and resizing the header and adding a background image

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -11,7 +11,7 @@ nav {
   box-sizing: border-box;
   position: fixed;
   font-family: 'Bungee', sans-serif;
-  position: fixed;
+  top: 0;
 }
 
 .write-new-tweet {
