--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -22,6 +22,13 @@ body {
   padding-top: 120px;
 }
 
+main {
+  width: 90%;
+  margin: 0 auto;
+  background-color: #f4f1ec;
+  padding: 20px;
+}
+
 
 
 /*
