--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,6 +1,4 @@
-/* header.css */
-
-header {
+header.main-header {
   background-color: #de9138;
   background-image: url("/images/brushed-alum.png");
   background-repeat: no-repeat;
@@ -13,7 +11,6 @@ header {
   padding: 20px;
   height: 400px;
 }
-
 
 .avatar {
   display: flex;
