--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -67,3 +67,15 @@
   color: #4056A1;
   font-weight: bold;
 }
+
+.error-message {
+  color: #ff0000;
+  background-color: #ffe6e6;
+  border: 1px solid #ff0000;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  font-weight: bold;
+  text-align: center;
+  display: none;
+}
