--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,3 +1,4 @@
+/* Base header styling */
 header.main-header {
   background-color: #de9138;
   background-image: url("/images/brushed-alum.png");
@@ -9,7 +10,7 @@ header.main-header {
   align-items: center;
   justify-content: center;
   padding: 20px;
-  height: 400px;
+  height: 300px; /* Adjust the height */
 }
 
 .avatar {
@@ -20,12 +21,14 @@ header.main-header {
 }
 
 .avatar img {
-  width: 200px;
-  height: 200px;
+  width: 150px; /* Adjust the size */
+  height: 150px; /* Adjust the size */
   border-radius: 50%;
 }
 
 .your-name {
   text-align: center;
   color: #fefefe;
+  font-size: 18px; /* Adjust the size */
 }
+
