--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -32,3 +32,42 @@ header.main-header {
   font-size: 18px; /* Adjust the size */
 }
 
+/* Tablet screens */
+@media (min-width: 768px) {
+  header.main-header {
+    height: 350px;
+    padding: 30px;
+
+  .avatar img {
+    width: 175px;
+    height: 175px;
+  }
+
+  .your-name {
+    font-size: 20px;
+  }
+}
+
+/* Desktop screens */
+@media (min-width: 1024px) {
+  header.main-header {
+    height: 400px;
+    padding: 40px;
+  }
+
+  .avatar img {
+    width: 200px;
+    height: 200px;
+  }
+
+  .your-name {
+    font-size: 24px;
+  }
+
+  .parent {
+    display: flex;
+    padding-top: 100px;
+    padding-right: 50px;
+    padding-left: 50px;
+    margin: 50px;
+}
